finalizing filtering ipynb. Minor edits to eeg_correlations.ipynb

--- a/eeg_correlations.ipynb
+++ b/eeg_correlations.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0a41550b",
+   "metadata": {},
+   "source": [
+    "This notebook attempts to perform Spearman Correlation Analysis between EEG electrode signals and . Here are some assumptions made by this notebook:\n",
+    "\n",
+    "1. All EEG data is collected with the [*Mind Monitor*](https://mind-monitor.com/) mobile application using a [*Muse 2*](https://choosemuse.com/products/muse-2) or [*Muse S*](https://choosemuse.com/products/muse-s-gen-2) headband.\n",
+    "2. All user data is contained in a relative `./data/` directory. Within it contains the following files:\n",
+    "    - `participants.csv`: From users' demographic survey data.\n",
+    "    - `rest_conc/`: sub-directory containing all participants' rest and concentration data. Each participant should have 4 files, to match the four separate trials conducted (**RestNoHMD**, **RestHMD**, **Conc2D**, and **Conc3D**). All files should have a specific naming structure: `<id>-<'rest'/'conc'>-<'novr'/'vr'/'2d'/'3d'>`. For example: `p3-rest-novr.csv`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a3cc61f",
    "metadata": {},
    "source": [
