--- a/eeg_correlations.ipynb
+++ b/eeg_correlations.ipynb
@@ -2,97 +2,52 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a41550b",
+   "id": "9db37805",
    "metadata": {},
    "source": [
-    "This notebook attempts to perform Spearman Correlation Analysis between EEG electrode signals and . Here are some assumptions made by this notebook:\n",
+    "This notebook attempts to perform Spearman Correlation Analysis between EEG electrode signals. This notebook makes some assumptions about the data:\n",
     "\n",
     "1. All EEG data is collected with the [*Mind Monitor*](https://mind-monitor.com/) mobile application using a [*Muse 2*](https://choosemuse.com/products/muse-2) or [*Muse S*](https://choosemuse.com/products/muse-s-gen-2) headband.\n",
-    "2. All user data is contained in a relative `./data/` directory. Within it contains the following files:\n",
-    "    - `participants.csv`: From users' demographic survey data.\n",
-    "    - `rest_conc/`: sub-directory containing all participants' rest and concentration data. Each participant should have 4 files, to match the four separate trials conducted (**RestNoHMD**, **RestHMD**, **Conc2D**, and **Conc3D**). All files should have a specific naming structure: `<id>-<'rest'/'conc'>-<'novr'/'vr'/'2d'/'3d'>`. For example: `p3-rest-novr.csv`."
+    "2. All user data is contained in a relative `./data/` directory. Within it contains the following files/directories:\n",
+    "    1. `participants.csv`: From users' demographic survey data.\n",
+    "    2. `trials_aligned/`: subdirectory containing all trial data. Within this subdirectory:\n",
+    "        1. All participants are sorted into folders of `p1`, `p2`, etc.\n",
+    "        2. Within each participant directory, trials are named as \"jay-vr-<#>\" (ex. `jay-vr-2`). Each trial will have some path similar to `p#/jay-vr-#/`.\n",
+    "        3. Each trial directory must contain:\n",
+    "            1. `pedestrians-aligned.csv`: agent trajectory data from the VR session. Does NOT contain the participant's trajectory data. Aligned to match the timestamps from trial data and EEG data.\n",
+    "            2. `raw_eeg.csv`: the raw EEG data collected from [*Mind Monitor*](https://mind-monitor.com/).\n",
+    "            3. `trial.csv`: the trial timestamps from the VR session.\n",
+    "            4. `user-aligned.csv`: the user's trajectory data from the VR session. Algined to match the timestamps from trial data and EEG data.\n",
+    "        \n",
+    "Based on findings from `participant_filtering.ipynb`, these participant trials will be used:\n",
+    "\n",
+    "* P1: Trial(s) 2\n",
+    "* P2: Trial(s) 1,4\n",
+    "* P6: Trial(s) 1,2\n",
+    "* P7: Trial(s) 1,2\n",
+    "* P8: Trial(s) 3\n",
+    "* P9: Trial(s) 1,2\n",
+    "* P10: Trial(s) 3\n",
+    "* P11: Trial(s) 1,2,3\n",
+    "* P12: Trial(s) 2,3\n",
+    "* P14: Trial(s) 1,2,3\n",
+    "* P15: Trial(s) 2,3\n",
+    "* P16: Trial(s) 1,2,3,4\n",
+    "* P17: Trial(s) 1,2,3\n",
+    "* P18: Trial(s) 1,2,3"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a3cc61f",
+   "id": "a680c005",
    "metadata": {},
    "source": [
-    "# Accepted Participants & Trials:\n",
-    "\n",
-    "* __P1:__ 2 trials, 1 usable\n",
-    "    * ~~1~~\n",
-    "    * __2 (AF7, AF8)__\n",
-    "* __P2:__ 2 trials, 2 usable (4 total, 3 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __4 (AF7, AF8)__\n",
-    "* __P3:__ 3 trials, 0 usable (7 total, 3 usable)\n",
-    "    * ~~1~~\n",
-    "    * ~~2~~\n",
-    "    * 3 (AF8)\n",
-    "* __P4:__ 2 trials, 0 usable (9 total, 3 usable)\n",
-    "    * 4 (AF8)\n",
-    "    * 5 (AF8)\n",
-    "* __P5:__ 2 trials, 0 usable (11 total, 3 usable)\n",
-    "    * 1 (AF8), \n",
-    "    * 2 (AF8, TP10)\n",
-    "* __P6:__ 2 trials, 2 usable (13 total, 5 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __2 (AF7, AF8)__\n",
-    "* __P7:__ 2 trials, 2 usable (15 total, 7 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __2 (AF7, AF8)__\n",
-    "* __P8:__ 3 trials, 1 usable (18 total, 8 usable)\n",
-    "    * ~~1~~\n",
-    "    * ~~2~~\n",
-    "    * __3 (All)__\n",
-    "* __P9:__ 2 trials, 2 usable (20 total, 10 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __2 (AF7, AF8)__\n",
-    "* __P10:__ 3 trials, 1 usable (23 total, 11 usable)\n",
-    "    * ~~1~~\n",
-    "    * ~~2~~\n",
-    "    * __3 (All)__\n",
-    "* __P11:__ 3 trials, 3 usable (26 total, 14 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __2 (AF7, AF8)__\n",
-    "    * __3 (AF7, AF8)__\n",
-    "* __P12:__ 3 trials, 2 usable (29 total, 16 usable)\n",
-    "    * ~~1~~\n",
-    "    * __2 (AF7, AF8)__\n",
-    "    * __3 (AF7, AF8)__\n",
-    "* __P13:__ 3 trials, 0 usable (32 total, 16 usable)\n",
-    "    * ~~1~~\n",
-    "    * ~~2~~\n",
-    "    * ~~3~~\n",
-    "* __P14:__ 3 trials, 3 usable (35 total, 19 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __2 (AF7, AF8)__\n",
-    "    * __3 (AF7, AF8)__\n",
-    "* __P15:__ 5 trials, 2 usable (40 total, 21 usable)\n",
-    "    * 1 (AF8)\n",
-    "    * __2 (AF7, AF8)__\n",
-    "    * __3 (AF7, AF8)__\n",
-    "    * 4 (AF8)\n",
-    "    * 5 (AF8)\n",
-    "* __P16:__ 4 trials, 4 usable (44 total, 25 usable)\n",
-    "    * __1 (All)__\n",
-    "    * __2 (All)__\n",
-    "    * __3 (All)__\n",
-    "    * __4 (All)__\n",
-    "* __P17:__ 3 trials, 3 usable (47 total, 28 usable)\n",
-    "    * __1 (AF7, AF8)__\n",
-    "    * __2 (AF7, AF8)__\n",
-    "    * __3 (AF7, AF8)__\n",
-    "* __P18:__ 3 trials, 3 usable (50 total, 31 usable)\n",
-    "    * __1 (AF7, AF8, TP10)__\n",
-    "    * __2 (AF7, AF8, TP10)__\n",
-    "    * __3 (AF7, AF8, TP10)__"
+    "# 0. Import Packages, Global Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "adcb4f92",
    "metadata": {},
    "outputs": [],
@@ -123,30 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ef17b9fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extraneous columns in EEG\n",
-    "_EXTRA_EEG_COLUMNS = [\n",
-    "    'Accelerometer_X','Accelerometer_Y','Accelerometer_Z',\n",
-    "    'Gyro_X','Gyro_Y','Gyro_Z',\n",
-    "    'HeadBandOn','Battery','Elements',\n",
-    "    'HSI_AF7','HSI_AF8',\n",
-    "    'HSI_TP9','HSI_TP10'\n",
-    "]\n",
-    "\n",
-    "# Frequency bands and electrodes\n",
+    "\"\"\"  ___________________________________  \"\"\"\n",
+    "\"\"\" |TO-DOs:                            | \"\"\"\n",
+    "\"\"\" | - Set the relative path data      | \"\"\"\n",
+    "\"\"\" | - Change frequencies of ineterest | \"\"\"\n",
+    "\"\"\" | - Change electrodes of ineterest  | \"\"\"\n",
+    "\"\"\" | - Change which trials to use      | \"\"\"\n",
+    "\"\"\"   ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅ ̅  \"\"\"\n",
+    "_DATA_DIR = './data/'\n",
     "_FREQUENCY_BANDS = ['Delta','Theta','Alpha','Beta','Gamma']\n",
-    "_ELECTRODES = ['AF7','AF8']\n",
+    "_ELECTRODES = ['AF7','AF8']   # Note that we removed `TP9` and `TP10` from analysis\n",
     "_FREQUENCY_COLORS = ['gray', 'red', 'blue', 'green', 'orange']\n",
-    "\n",
-    "# Directories\n",
-    "_RESTCONC_DIR = './samples/rest_conc_data/'\n",
-    "_ALIGNED_DIR = './samples/participant_data_aligned/'\n",
-    "\n",
-    "# Trials to Use\n",
     "_ACCEPTED_PARTICIPANTS = {\n",
     "    'p1':['jay-vr-2'],\n",
     "    'p2':['jay-vr-1','jay-vr-4'],\n",
@@ -162,7 +109,21 @@
     "    'p16':['jay-vr-1','jay-vr-2','jay-vr-3','jay-vr-4'],\n",
     "    'p17':['jay-vr-1','jay-vr-2','jay-vr-3'],\n",
     "    'p18':['jay-vr-1','jay-vr-2','jay-vr-3']\n",
-    "}"
+    "}\n",
+    "\n",
+    "# Data Paths - Automated!\n",
+    "_DEMOGRAPHICS_FILE = os.path.join(_DATA_DIR, 'participants.csv')\n",
+    "_RESTCONC_DIR = os.path.join(_DATA_DIR, 'rest_conc_data/')\n",
+    "_ALIGNED_DIR = os.path.join(_DATA_DIR, 'trials_aligned/')\n",
+    "\n",
+    "# Extraneous columns in EEG. No need to modify unless necessary\n",
+    "_EXTRA_EEG_COLUMNS = [\n",
+    "    'Accelerometer_X','Accelerometer_Y','Accelerometer_Z',\n",
+    "    'Gyro_X','Gyro_Y','Gyro_Z',\n",
+    "    'HeadBandOn','Battery','Elements',\n",
+    "    'HSI_AF7','HSI_AF8',\n",
+    "    'HSI_TP9','HSI_TP10'\n",
+    "]"
    ]
   },
   {
@@ -170,12 +131,12 @@
    "id": "e7735286",
    "metadata": {},
    "source": [
-    "# Reading Rest EEGs"
+    "# 1. Reading Rest EEGs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1cc41f02",
    "metadata": {},
    "outputs": [
@@ -862,13 +823,6 @@
     "\n",
     "    # Add rest range to rest_dfs\n",
     "    rest_dfs.append(rest_ranges)\n",
-    "    \n",
-    "    \n",
-    "    # For the rest state, we calculate the min and max for each band-electrode combo.\n",
-    "    #for freq in _FREQUENCY_BANDS:\n",
-    "    #    for electrode in _ELECTRODES:\n",
-    "    #        colname = f'{freq}_{electrode}'\n",
-    "    #        rest_min = rest_df[colname]\n",
     "\n",
     "# Concatenate rest eegs\n",
     "gr_df = pd.concat(rest_dfs, ignore_index=False)\n",
@@ -883,7 +837,7 @@
    "id": "034e956a",
    "metadata": {},
    "source": [
-    "# Reading Trial Data\n",
+    "# 2. Reading Trial Data\n",
     "\n",
     "We will perform correlation tests on EEG powers to the following properties:\n",
     "\n",
@@ -900,12 +854,12 @@
    "id": "011e2057",
    "metadata": {},
    "source": [
-    "## Functions"
+    "## 2.1 Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6c11aa81",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1109,7 @@
    "id": "c5638ad4",
    "metadata": {},
    "source": [
-    "## Aggregation"
+    "## 2.2 Aggregation"
    ]
   },
   {
